Version 1.5.7+svn:
 * Language and i18n:
   * updated translations: Slovak
 * Networking
   * ensure SDL Net initialized before attempting to send upload_log
 * WML engine:
   * add an "animate" key to the [teleport] event
   * add a resistance_anim block used whenever a unit uses a [resistance]
     ability on a neghbour

Version 1.5.7:
 * Campaigns:
   * Descent into Darkness
     * Removed debris from this campaign's copy of the map of the
       Great Continent, and converted Parthyn's marker (which was black)
       to a brownish marker.
   * Eastern Invasion
     * Converted to the new gold carryover system.
     * Gave the undead flag to relevant sides.
     * Fixed Dacyn and Owaec not being loyal.
     * In 'Mal-Ravanal's Capital', reworked how the prisoner knights work: now
       they're placed on the map in cages with guards next to them, and the
       player must kill the guard to release the prisoner.
     * Removed debris from this campaign's map of the Great Continent,
       and converted all black markers to brownish markers.
   * Heir to the Throne
     * Added an idle animation for L2 Princess.
     * Fixed the dwarves attacking the player in 'The Lost General'.
     * In 'Bay of Pearls', the player receives recruitment of all lvl1 mermen
       units if both enemy leaders are defeated, and only Mermen Fighters if
       only one of them is.
     * Fixed not being able to recruit mermen in 'Isle of the Damned'.
   * Liberty
     * Converted to the new gold carryover system.
     * Gave the undead flag to relevant sides.
   * The Rise of Wesnoth
     * Changed Familiar's portrait to match his new unit type.
     * Fixed a good amount of funny inconsistencies with Familiar's
       unit type.
     * Fixed broken death events.
     * Lady Outlaw does not lose her experience on 'Return to Oldwood'.
     * Restored missing leading animations for Noble Commander and
       Noble Lord, and gave leading animations to Wesfolk Outcast line.